# MarkerTracking

./: CMakeLists.txt  Defs.h  GeometricROI.cpp  GeometricROI.h  KneeAPI.cpp  KneeAPI.h  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  vtkAnnotateMarker.cpp  vtkAnnotateMarker.h  vtkComputeDistanceField.cpp  vtkComputeDistanceField.h  vtkMotionFilter.cpp  vtkMotionFilter.h
InputData/OpticalData/markers/: femur_summary.txt  tibia_summary.txt
InputData/OpticalData/motion/: motiondata.txt
InputData/OpticalData/surfaceprobe/: femur_surface.txt  tibia_surface.txt
InputData/STL/: tibia.stl
